Solustion without unhover but with fixed jumps

--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,8 @@ body {
 .people {
   display: grid;
   grid-template-columns: repeat(4, 200px);
-  grid-gap: 30px;
+  grid-template-rows: repeat(3, 231px);
+  grid-gap: 40px 30px;
   margin-top: 30px;
 }
 
@@ -31,6 +32,7 @@ body {
     height: 287px;
     background-color: #eee;
     border-radius: 10px;
+    z-index: 2;
     transform: scale(1.2, 1.2) translateX(-8px);
 
     & .photo {
@@ -105,5 +107,6 @@ body {
 @media screen and (max-width: 999px) {
   .people {
     grid-template-columns: repeat(2, 200px);
+    grid-template-rows: repeat(5, 231px);
   }
 }
